--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,5 +7,6 @@
 @import url('./interfaces/app/index.css');
 @import url('interfaces/modules/common/screen/index.css');
 @import url('interfaces/modules/powerOnScreen/index.css');
+@import url('interfaces/modules/sleepModeScreen/index.css');
 
 
