--- a/src/styles/interfaces/modules/powerOnScreen/index.css
+++ b/src/styles/interfaces/modules/powerOnScreen/index.css
@@ -1,13 +1,11 @@
 .power__on {
 	width: 100%;
 	height: 100%;
-
 	position: relative;
-	z-index: 1;
-
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	z-index: 99999999999999999999999999999999999999999999999999999999;
 }
 
 .power__on-close {
