--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,6 +7,7 @@
 /* ! INTERFACES, MODULES */
 @import url('./interfaces/app/index.css');
 @import url('interfaces/modules/common/screen/index.css');
+@import url('interfaces/modules/common/swipeLine/index.css');
 @import url('interfaces/modules/powerOnScreen/index.css');
 @import url('interfaces/modules/sleepModeScreen/index.css');
 @import url('interfaces/modules/lockScreen/index.css');
