--- a/src/styles/interfaces/modules/lockScreen/index.css
+++ b/src/styles/interfaces/modules/lockScreen/index.css
@@ -1,12 +1,18 @@
 .lock {
 	position: absolute;
-	top: -1px;
 	bottom: -1px;
-	left: -1px;
-	right: -1px;
+	left: -2px;
+	right: 0;
+	width: 101%;
+	height: 101%;
 	z-index: 999;
 	display: flex;
 	flex-direction: column;
+	/*transition: 0.01s;*/
+}
+
+.lock.open {
+	transition: 0.3s;
 }
 
 .lock__wallpaper {
@@ -17,7 +23,7 @@
 
 .lock__wallpaper svg {
 	width: 100%;
-	height: 101%;
+	height: 100%;
 }
 
 
