Created functionality to swipe lock screen up and down

--- a/src/styles/interfaces/app/index.css
+++ b/src/styles/interfaces/app/index.css
@@ -21,6 +21,12 @@
 	background: var(--color-black);
 }
 
+.phone__screen h1 {
+	color: red;
+	text-align: center;
+	font-size: 60px;
+}
+
 .phone__icon {
 	position: relative;
 }
