--- a/src/styles/interfaces/modules/lockScreen/index.css
+++ b/src/styles/interfaces/modules/lockScreen/index.css
@@ -8,8 +8,6 @@
 	z-index: 999;
 	display: flex;
 	flex-direction: column;
-	overflow: hidden;
-	/*transition: 0.01s;*/
 }
 
 .lock.open,
@@ -22,9 +20,10 @@
 	position: absolute;
 	inset: 0;
 	z-index: -1;
+	overflow: hidden;
 }
 
-.lock__wallpaper svg {
+.lock__wallpaper > svg {
 	width: 100%;
 	height: 100%;
 }
@@ -45,7 +44,7 @@
 }
 
 .lock__meta-icon,
-.lock__meta-icon svg{
+.lock__meta-icon > svg{
 	width: 25px;
 	height: 35px;
 }
@@ -100,7 +99,7 @@
 	transition: transform .3s cubic-bezier(.42,.97,.52,1.49), background-color .1s linear;
 }
 
-.lock__actions-icon svg {
+.lock__actions-icon > svg {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -119,6 +118,14 @@
 
 .lock__actions-icon.active path{
 	fill: var(--color-black);
+}
+
+.lock__bottom {
+	position: absolute;
+	top: 100%;
+	width: 80%;
+	height: 40px;
+	cursor: pointer;
 }
 
 
