--- a/src/styles/interfaces/modules/common/application/index.css
+++ b/src/styles/interfaces/modules/common/application/index.css
@@ -3,6 +3,12 @@
 	height: 80px;
 	display: flex;
 	flex-direction: column;
+	text-align: center;
+}
+
+.application figure {
+	width: 100%;
+	height: 100%;
 }
 
 .application__icon {
@@ -11,10 +17,14 @@
 }
 
 .application__name {
-	margin-top: auto;
-	font-size: 12px;
+	margin-top: 5px;
+	font-size: 13px;
 	font-style: normal;
 	font-weight: 500;
 	line-height: 16px;
 	color: var(--color-white);
+
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
